kubernets-yaml/deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-hello-world
  template:
    metadata:
      labels:
        app: pod-hello-world
    spec:
      containers:
        - name: cont-hello-world
          image: nginx:latest 
          ports:
            - containerPort: 80
