kubernets-yaml/service-hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service-hello-world
  name: service-hello-world
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service-hello-world
  type: ClusterIP
status:
  loadBalancer: {}
