kubernets-yaml/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - hosts:
        - devops-project.com
      secretName: tls-secret
  rules:
    - host: devops-project.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-hello-world
                port:
                  number: 80
